--- a/0006/0006.md
+++ b/0006/0006.md
@@ -45,3 +45,99 @@ Githubにサンプルコードがありました。
 写真上部のねじを緩めてリード線を接続してください。
 
 ## CANASPAD-IoTで使う方法 
+サンプルコードを参考にしました。
+<pre class="prettyprint lang-c">
+'''
+#include <WiFi.h>
+#include <HTTPClient.h>
+#include <M5StickC.h>
+#include <Wire.h>
+#include "ADS1100.h"
+
+ADS1100 ads;
+#define REF_VOL    3.3
+#define ADC_BASE   REF_VOL/32768
+
+const char SSID[] = "Your WIFI SSID";
+const char PASSWORD[] = "Your WIFI PASS";
+const char* host     = "iot.canaspad.com";
+const char* event    = "/data/";
+const char* device_name    = "Your Device Name";
+const char* access_key    = "Your Access Key"; //アカウントの新規登録のためにお送りした、アクティベーションメールに記載されています
+
+void setup() {
+  M5.begin();
+  Serial.begin(115200);
+  WiFi.begin(SSID, PASSWORD);
+  Serial.print("WiFi connecting");
+  while (WiFi.status() != WL_CONNECTED) {
+    Serial.print(".");
+    delay(100);
+  }
+  Serial.println(" connected");
+  ads.getAddr_ADS1100(ADS1100_DEFAULT_ADDRESS);
+  ads.setGain(GAIN_ONE);
+  ads.setMode(MODE_CONTIN);
+  ads.setRate(RATE_8);
+  ads.setOSMode(OSMODE_SINGLE);
+  ads.begin();
+}
+
+void loop() {
+  HTTPClient http;
+  String URL = "http://";
+         URL += String(host);
+         URL += String(event);
+         URL += String(access_key)   + ",";
+         URL += String(device_name)  + ",";
+         URL += measure() + "/";
+  Serial.print("Requesting URL: ");
+  Serial.println(URL);
+  http.begin(URL);
+  int httpCode = http.GET();
+  if (httpCode > 0) { //Check for the returning code
+    String payload = http.getString();
+    Serial.println(httpCode);
+    Serial.println(payload);
+    }
+  else {
+      Serial.print("Error on HTTP request!");
+      Serial.println(httpCode);
+    }
+  http.end();
+  delay(30*60*1000);
+}
+
+String measure(){
+    byte error;
+    int8_t address;
+    address = ads.ads_i2cAddress;
+    Wire.beginTransmission(address);
+    error = Wire.endTransmission();
+    if (error == 0)
+    {
+        int16_t result,vol;
+        float temp;
+        Serial.println("Getting Differential Reading from ADS1100");
+        Serial.println(" ");
+        result = ads.Measure_Differential();
+        Serial.print("Digital Value of Analog Input between Channel 0 and 1: ");
+        Serial.println(result);
+        temp = result * ADC_BASE * 4;
+        vol = temp *1000;
+        Serial.println(" ");
+        Serial.println("        ***************************        ");
+        Serial.println(" ");
+        return String(vol) + String(result);
+    }
+    else
+    {
+        Serial.println("ADS1100 Disconnected!");
+        Serial.println(" ");
+        Serial.println("        ************        ");
+        Serial.println(" ");
+        return "-1,-1";
+    }
+}
+'''
+</pre>
