--- a/0006/0006.md
+++ b/0006/0006.md
@@ -1,6 +1,6 @@
 ## M5StickC ADC Hat（ADS1100）
 ADC HatはM5StickC用のADコンバータです。  
-入力電圧は0－12V,分解能は16bit(0-65535)と高精度で計測することが出来ます。  
+入力電圧は0－12V,分解能は16bit(0-65535)、線形性も良好と高精度で計測することが出来ます。  
 M5StickC本体のADCは0-3.3V,12bit(0-4095)なのでそれ以上の電圧や精度が求められる用途に適します。
 
 <div id="toc"></div>
@@ -45,7 +45,9 @@ Githubにサンプルコードがありました。
 写真上部のねじを緩めてリード線を接続してください。
 
 ## CANASPAD-IoTで使う方法 
-サンプルコードを参考にしました。
+- [https://github.com/m5stack/M5StickC/tree/master/examples/Hat/ADC](https://github.com/m5stack/M5StickC/tree/master/examples/Hat/ADC)
+
+上記サンプルコードを参考にしました。
 <pre class="prettyprint lang-c">
 '''
 #include <WiFi.h>
@@ -141,3 +143,47 @@ String measure(){
 }
 '''
 </pre>
+
+
+## 線形性の検証
+
+早速、上記のコードを使ってCANASPAD-IoTにデータを送信してみましょう。
+データの送信手順は[CANASPAD-IoTの使い方](https://canaspad.com/post/1/)を確認してください。
+
+下図は入力電圧を1Vから11Vまで1V刻みに変化させ、CANASPAD-IoTにデータを送信したときのグラフです。直線性はいい感じです。
+
+![alt](/media/post_content_images/0006_07.png)
+
+次に、CANASPAD-IoTからデータをダウンロードして、EXCELで近似を確認しましょう。
+
+ダウンロードの際にはRAWデータとRESHAPEデータを選択可能です。
+
+今回はデータを自動整形してくれてあるRESHAPEデータを選択します。
+データのダウンロード手順は[CANASPAD-IoTの使い方](https://canaspad.com/post/1/)を確認してください。
+
+RESHAPEからは以下のようなデータが出力されます。
+
+|---|ADC_Hat_col01|ADC_Hat_col02|
+|---|---|---|	
+|2021/5/11 9:54|998|2479|
+|2021/5/11 9:55|2006|4981|
+|2021/5/11 9:56|2972|7378|
+|2021/5/11 9:57|3980|9882|
+|2021/5/11 9:58|4968|12334|
+|2021/5/11 9:59|5953|14779|
+|2021/5/11 10:00|6932|17209|
+|2021/5/11 10:01|7951|19739|
+|2021/5/11 10:02|8916|22134|
+|2021/5/11 10:03|9923|24634|
+|2021/5/11 10:04|10906|27075|
+
+このデータを使ってグラフを作成しました。
+
+![alt](/media/post_content_images/0006_08.png)
+
+近似式からも直線性が良好であることが確認できます。
+
+## おわりに
+今回はM5StickC ADC Hatを題材にしてCANASPAD-IoTのチュートリアルを作成しました。
+
+CANASPAD-IoTはマイコンを使ってIoTをプロトタイプしたり、センシングデータから相関ルールを探索するために便利なサービスです。無料なのでぜひご利用ください。
