--- a/0008/0008.md
+++ b/0008/0008.md
@@ -24,44 +24,101 @@ Gravity Infrared Co2 SensorはDFRobot社製のCO2センサです。
 Hatなので差し込むだけで接続できます。ピンを間違えることはありません。  
 
 ## サンプルコード  
-- [ESP32 Arduino: Using an infrared CO2 sensor | DFRobotチュートリアル](https://www.dfrobot.com/blog-991.html)
 
-- [「Gravity」シリーズのセンサを使う｜スイッチサイエンス](http://pages.switch-science.com/letsiot/gravity/)
+- [https://github.com/spadr/M5/blob/main/M5StickC/Gravity_infrared_co2_sensor/Gravity_infrared_co2_sensor.ino](https://github.com/spadr/M5/blob/main/M5StickC/Gravity_infrared_co2_sensor/Gravity_infrared_co2_sensor.ino)
 
-様々なサイトにサンプルコードがありますが、単純にanalogRead()で電圧を読むだけなので、難しくありません。  
+```cpp
+#include <M5StickC.h>
+
+const int PIN = 36;
+
+void setup(void)
+{
+    M5.begin();
+    Serial.begin(115200);
+    pinMode(PIN, INPUT);
+
+    M5.Lcd.fillScreen(BLACK);
+    M5.Lcd.setTextColor(ORANGE);
+}
+
+void loop(void)
+{
+    Serial.println("Getting Concentration from infrared CO2 sensor");
+    Serial.println(" ");
+    
+    float vol = (analogRead(PIN) + 1) * 3.3 / (4095 + 1);//0-3.3V,12bit(0-4095)
+    float conc  = 2900.63 * vol - 801.26;//Liner equation through P and Q. P(0.42v,417ppm), Q(2.0v,5000ppm)
+                                         //CO2 Concentration in Japan in 2020 is 417 ppm.
+    
+    Serial.print("CO2 Concentration : ");
+    Serial.println(conc);
+    M5.Lcd.fillScreen(BLACK);
+
+    String data = String(conc ,0);
+    M5.Lcd.drawCentreString("CO2 Conc ", 0, 10, 2);
+    M5.Lcd.drawCentreString(data, 0, 30, 4);
+    M5.Lcd.drawCentreString("ppm", 60, 30, 2);
+
+    Serial.println(" ");
+    Serial.println("        ***************************        ");
+    Serial.println(" ");
+
+    delay(1000);
+}
+```
+
+単純にanalogRead()で電圧を読むだけなので、難しくありません。  
+    
+
+
+## CO2濃度の換算式について
+
+```cpp
+//0-3.3V,12bit(0-4095)
+float vol = (analogRead(PIN) + 1) * 3.3 / (4095 + 1);
+
+//CO2 Concentration in Japan in 2020 is 417 ppm.
+//Liner equation through P and Q. P(0.42v,417ppm), Q(2.0v,5000ppm)
+float conc  = 2900.63 * vol - 801.26;
+```
+電圧からCO2濃度への換算式は[２点を通る直線の方程式 - 高精度計算サイト](https://keisan.casio.jp/exec/system/1173752940)で作成しました。
+
+[公式Wiki](https://wiki.dfrobot.com/Gravity__Analog_Infrared_CO2_Sensor_For_Arduino_SKU__SEN0219)
+の図によると0.4Vの出力電圧があるときは0ppmと読み取れるため、最初はP(0.4v,0ppm), Q(2.0v,5000ppm)の条件で測定を行いましたが、それらしい値を得られませんでした。
+
+そこで、実際に一晩屋外で測定したところ、出力電圧は平均して0.42Vでした。また、昨年の[日本国内のCO2濃度](https://ds.data.jma.go.jp/ghg/kanshi/ghgp/co2_trend.html)は417ppmだったようなのでそれらを加味して、換算式はCO2濃度 = 2900.63 * 出力電圧 - 801.26としました。
+
+さらに厳密にする場合はCO2の標準ガスをつかうのですが、このくらいの精度で十分だと思います。
 
 ## M5StickCでの使い方  
 1.下記のURLからサンプルコードをダウンロードする  
-- [https://github.com/m5stack/M5StickC](https://github.com/m5stack/M5StickC)
+- [https://github.com/spadr/M5](https://github.com/spadr/M5)
 
 ![alt](/media/post_content_images/0006_05.jpg)
 
 写真上部の矢印が指す"Code"をクリックしてメニューを出し、その中の"Download ZIP"をクリックするとダウンロード出来ます。ZIPファイルは任意のフォルダーにダウンロードして解凍して下さい。
 
 2.サンプルコードをM5StickCに書き込む  
-上の手順で解凍されたフォルダー内の"examples/Hat/ADC/ADC.ino"をArduinoIDE等で開き、M5StickCに書き込みます。
+上の手順で解凍されたフォルダー内の"M5StickC/Gravity_infrared_co2_sensor/Gravity_infrared_co2_sensor.ino"をArduinoIDE等で開き、M5StickCに書き込みます。
 
-3.プラスとマイナスに注意して計測対象のリード線を接続する  
+3.G36,5V,GNDにリード線を接続する  
 
 ![alt](/media/post_content_images/0006_06.jpg)
 
-写真上部のねじを緩めてリード線を接続してください。
+写真のようにリード線を接続してください。
 
 ## CANASPAD-IoTで使う方法 
-- [https://github.com/m5stack/M5StickC/tree/master/examples/Hat/ADC](https://github.com/m5stack/M5StickC/tree/master/examples/Hat/ADC)
+- [https://github.com/spadr/CANASPAD-IoT_SAMPLE/tree/main/M5StickC/Gravity_infrared_co2_sensor](https://github.com/spadr/CANASPAD-IoT_SAMPLE/tree/main/M5StickC/Gravity_infrared_co2_sensor)
 
-上記サンプルコードを参考にしました。
+Githubにもサンプルコードを記載してます。
+
+
+```cpp
 <pre class="prettyprint lang-c">
-'''
 #include <WiFi.h>
 #include <HTTPClient.h>
 #include <M5StickC.h>
-#include <Wire.h>
-#include "ADS1100.h"
-
-ADS1100 ads;
-#define REF_VOL    3.3
-#define ADC_BASE   REF_VOL/32768
 
 const char SSID[] = "Your WIFI SSID";
 const char PASSWORD[] = "Your WIFI PASS";
@@ -70,9 +127,12 @@ const char* event    = "/data/";
 const char* device_name    = "Your Device Name";
 const char* access_key    = "Your Access Key"; //アカウントの新規登録のためにお送りした、アクティベーションメールに記載されています
 
+const int PIN = 36;
+
 void setup() {
   M5.begin();
   Serial.begin(115200);
+  
   WiFi.begin(SSID, PASSWORD);
   Serial.print("WiFi connecting");
   while (WiFi.status() != WL_CONNECTED) {
@@ -80,16 +140,16 @@ void setup() {
     delay(100);
   }
   Serial.println(" connected");
-  ads.getAddr_ADS1100(ADS1100_DEFAULT_ADDRESS);
-  ads.setGain(GAIN_ONE);
-  ads.setMode(MODE_CONTIN);
-  ads.setRate(RATE_8);
-  ads.setOSMode(OSMODE_SINGLE);
-  ads.begin();
+  
+  pinMode(PIN, INPUT);
+  
+  M5.Lcd.fillScreen(BLACK);
+  M5.Lcd.setTextColor(ORANGE);
 }
 
 void loop() {
   HTTPClient http;
+  
   String URL = "http://";
          URL += String(host);
          URL += String(event);
@@ -98,62 +158,54 @@ void loop() {
          URL += measure() + "/";
   Serial.print("Requesting URL: ");
   Serial.println(URL);
+  
   http.begin(URL);
   int httpCode = http.GET();
-  if (httpCode > 0) { //Check for the returning code
+  if (httpCode > 0) {
     String payload = http.getString();
+    Serial.print("httpCode : ");
     Serial.println(httpCode);
+    Serial.print("payload : ");
     Serial.println(payload);
     }
   else {
       Serial.print("Error on HTTP request!");
       Serial.println(httpCode);
     }
+  
   http.end();
-  delay(30*60*1000);
+  
+  delay(1*60*1000);
 }
+
 
 String measure(){
-    byte error;
-    int8_t address;
-    address = ads.ads_i2cAddress;
-    Wire.beginTransmission(address);
-    error = Wire.endTransmission();
-    if (error == 0)
-    {
-        int16_t result,vol;
-        float temp;
-        Serial.println("Getting Differential Reading from ADS1100");
-        Serial.println(" ");
-        result = ads.Measure_Differential();
-        Serial.print("Digital Value of Analog Input between Channel 0 and 1: ");
-        Serial.println(result);
-        temp = result * ADC_BASE * 4;
-        vol = temp *1000;
-        Serial.println(" ");
-        Serial.println("        ***************************        ");
-        Serial.println(" ");
-        return String(vol) + String(result);
-    }
-    else
-    {
-        Serial.println("ADS1100 Disconnected!");
-        Serial.println(" ");
-        Serial.println("        ************        ");
-        Serial.println(" ");
-        return "-1,-1";
-    }
+    Serial.println("Getting Concentration from infrared CO2 sensor");
+    Serial.println(" ");
+    
+    float vol = (analogRead(PIN) + 1) * 3.3 / (4095 + 1);//0-3.3V,12bit(0-4095)
+    float conc  = 2900.63 * vol - 801.26;//Liner equation through P and Q. P(0.42v,417ppm), Q(2.0v,5000ppm)
+                                         //CO2 Concentration in Japan in 2020 is 417 ppm.
+    
+    Serial.print("CO2 Concentration : ");
+    Serial.println(conc);
+    M5.Lcd.fillScreen(BLACK);
+
+    String data = String(conc ,0);
+    M5.Lcd.drawCentreString("CO2 Conc ", 0, 10, 2);
+    M5.Lcd.drawCentreString(data, 0, 30, 4);
+    M5.Lcd.drawCentreString("ppm", 65, 30, 2);
+
+    Serial.println(" ");
+    Serial.println("        ***************************        ");
+    Serial.println(" ");
+
+    return String(conc);
 }
-'''
 </pre>
+```
 
 
-## 線形性の検証
-
-早速、上記のコードを使ってCANASPAD-IoTにデータを送信してみましょう。
-データの送信手順は[CANASPAD-IoTの使い方](https://canaspad.com/post/1/)を確認してください。
-
-下図は入力電圧を1Vから11Vまで1V刻みに変化させ、CANASPAD-IoTにデータを送信したときのグラフです。直線性はいい感じです。
 
 ![alt](/media/post_content_images/0006_07.png)
 
