--- a/0008/0008.md
+++ b/0008/0008.md
@@ -1,9 +1,9 @@
 ## Gravity infrared co2 sensor v1.1
 Gravity Infrared Co2 SensorはDFRobot社製のCO2センサです。  
 測定には非分散赤外線方式（NDIR）を採用しており、大気中の二酸化炭素濃度を0〜5000 ppmの範囲で測定します。測定値はDACで出力されるので、今回はM5StickC本体のADC(0-3.3V,12bit)で値を読み取ります。
-
+```
 <div id="toc"></div>
-
+```
 ## 商品について  
 - [Gravity - 赤外線CO2センサ/メーター｜スイッチサイエンス](https://www.switch-science.com/catalog/4026/)
 
@@ -11,17 +11,17 @@ Gravity Infrared Co2 SensorはDFRobot社製のCO2センサです。
 
 - [ESP32 Arduino: Using an infrared CO2 sensor | DFRobotチュートリアル](https://www.dfrobot.com/blog-991.html)
 
-![alt](/media/post_content_images/0006_02.jpg)
+![alt](/media/post_content_images/0008_03.jpg)
 
 表側です
 
-![alt](/media/post_content_images/0006_03.jpg)
+![alt](/media/post_content_images/0008_04.jpg)
 
 裏側です
 
-![alt](/media/post_content_images/0006_04.jpg)
+![alt](/media/post_content_images/0008_05.jpg)
 
-Hatなので差し込むだけで接続できます。ピンを間違えることはありません。  
+横からです  
 
 ## サンプルコード  
 
@@ -104,15 +104,11 @@ float conc  = 2900.63 * vol - 801.26;
 
 3.G36,5V,GNDにリード線を接続する  
 
-![alt](/media/post_content_images/0006_06.jpg)
+![alt](/media/post_content_images/0008_06.jpg)
 
 写真のようにリード線を接続してください。
 
 ## CANASPAD-IoTで使う方法 
-- [https://github.com/spadr/CANASPAD-IoT_SAMPLE/tree/main/M5StickC/Gravity_infrared_co2_sensor](https://github.com/spadr/CANASPAD-IoT_SAMPLE/tree/main/M5StickC/Gravity_infrared_co2_sensor)
-
-Githubにもサンプルコードを記載してます。
-
 
 ```cpp
 <pre class="prettyprint lang-c">
@@ -205,40 +201,25 @@ String measure(){
 </pre>
 ```
 
+![alt](/media/post_content_images/0008_07.png)
+
+- [https://github.com/spadr/CANASPAD-IoT_SAMPLE/tree/main/M5StickC/Gravity_infrared_co2_sensor](https://github.com/spadr/CANASPAD-IoT_SAMPLE/tree/main/M5StickC/Gravity_infrared_co2_sensor)
+
+Githubにもサンプルコードを記載してます。
 
 
-![alt](/media/post_content_images/0006_07.png)
+## 応答性について
+サンプルコードをつかってCANASPAD-IoTにデータを送信して応答性を確認しました。
+![alt](/media/post_content_images/0008_01.png)
 
-次に、CANASPAD-IoTからデータをダウンロードして、EXCELで近似を確認しましょう。
+若干ノイズが乗っていますが、電源投入後から徐々に400ppm付近へ収束しています。
+最終的に大気のCO2濃度である400ppm付近になるまで2時間程かかりました。
+実装する際は、応答に2時間かかることを留意する必要がありそうです。
+また、ノイズについてはM5StickC本体のADCによるところも大きいかもしれません。
+気になる場合は、別途ADCを接続して試すか、平均しても良さそうです。
 
-ダウンロードの際にはRAWデータとRESHAPEデータを選択可能です。
-
-今回はデータを自動整形してくれてあるRESHAPEデータを選択します。
-データのダウンロード手順は[CANASPAD-IoTの使い方](https://canaspad.com/post/1/)を確認してください。
-
-RESHAPEからは以下のようなデータが出力されます。
-
-|---|ADC_Hat_col01|ADC_Hat_col02|
-|---|---|---|	
-|2021/5/11 9:54|998|2479|
-|2021/5/11 9:55|2006|4981|
-|2021/5/11 9:56|2972|7378|
-|2021/5/11 9:57|3980|9882|
-|2021/5/11 9:58|4968|12334|
-|2021/5/11 9:59|5953|14779|
-|2021/5/11 10:00|6932|17209|
-|2021/5/11 10:01|7951|19739|
-|2021/5/11 10:02|8916|22134|
-|2021/5/11 10:03|9923|24634|
-|2021/5/11 10:04|10906|27075|
-
-このデータを使ってグラフを作成しました。
-
-![alt](/media/post_content_images/0006_08.png)
-
-近似式からも直線性が良好であることが確認できます。
 
 ## おわりに
-今回はM5StickC ADC Hatを題材にしてCANASPAD-IoTのチュートリアルを作成しました。
+今回はCO2センサを題材にしてCANASPAD-IoTのチュートリアルを作成しました。
 
 CANASPAD-IoTはマイコンを使ってIoTをプロトタイプしたり、センシングデータから相関ルールを探索するために便利なサービスです。無料なのでぜひご利用ください。
