--- a/0012/0012.md
+++ b/0012/0012.md
@@ -3,7 +3,9 @@
 
 肝心のポンプの吐出量は約0.5L/minと家庭レベルのプランター園芸では十分な量です。
 
-例えば、 [トマトの養液栽培では40〜50ccを10回程度の灌水量](https://cococara.jp/20200920-01/)なので、一日のポンプの稼働時間は合計で1分程度で済む計算になります。おそらく、モバイルバッテリーでも数日間は稼働ができるでしょう。
+例えば、 [トマトの養液栽培では40〜50ccを10回程度の灌水量](https://cococara.jp/20200920-01/)なので、一日のポンプの稼働時間は合計で1分程度で済む計算になります。
+
+おそらく、モバイルバッテリーでも数日間は稼働ができるでしょう。
 
 
 ## 商品について  
@@ -44,22 +46,24 @@ Groveに接続してください。
 ## CANASPAD-IoTで使う方法 
 
 
-- [https://github.com/spadr/CANASPAD-IoT_SAMPLE/tree/main/M5StickC/Gravity_infrared_co2_sensor](https://github.com/spadr/CANASPAD-IoT_SAMPLE/tree/main/M5StickC/Gravity_infrared_co2_sensor)
+- [https://github.com/spadr/CANASPAD-IoT_SAMPLE/blob/main/M5StickC/watering_unit/watering_unit.ino](https://github.com/spadr/CANASPAD-IoT_SAMPLE/blob/main/M5StickC/watering_unit/watering_unit.ino)
 
-Githubにもサンプルコードを記載してます。
+Githubにもサンプルコードを記載しています。
 
 
-## 精度の検証
-サンプルコードをつかってCANASPAD-IoTにデータを送信し、DHT11と精度を比較しました。
+## 土壌水分センサの校正
 
-![alt](/media/post_content_images/0011_03.png)
+[静電容量式の土壌水分センサーの校正](https://qiita.com/Kosuke_Matsui/items/9b461a8b63593619aa51)を参考にしました。
 
-温度についてはSHT35,DHT11両方とも、ほぼ差はありませんでしたが、測定ノイズという点ではSHT35の方が安定しています。約1000円の差額はここにあるようです。
+静電容量式の土壌水分センサは土壌種類やEC、温度、指で触れたかどうか等によって値が変動するようなのですが、あくまで家庭用です、ラフに校正をします。
 
-そのため、どちらを使うかはケースバイケースですが、予算に余裕があるのであればSHT35は買いでしょう。
+具体的には、水分量100%は水につけたとき、0%は空気中に置いたときとしました。
+それぞれの出力電圧は1.2V,1.6Vと[参考](https://qiita.com/Kosuke_Matsui/items/9b461a8b63593619aa51)にしたサイトで扱われているセンサとあまり大差ない結果になりました。
+
+また、乾燥しているか否かの閾値は1.4Vにしましたが、実際に測定をしながら、調節していくほうが良いとおもいます。
 
 
 ## おわりに
-今回はSHT35を題材にしてCANASPAD-IoTのチュートリアルを作成しました。
+今回は水分測定センサ付き給水ポンプユニット Watering Unitを題材にしてCANASPAD-IoTのチュートリアルを作成しました。
 
 CANASPAD-IoTはマイコンを使ってIoTをプロトタイプしたり、センシングデータから相関ルールを探索するために便利なサービスです。無料なのでぜひご利用ください。
