--- a/0013/0013.md
+++ b/0013/0013.md
@@ -52,6 +52,13 @@ Githubにもサンプルコードを記載しています。
 
 データ収集中
 
+メロンを栽培しています
+
+![alt](/media/post_content_images/0013_01.jpg)
+
+
+![alt](/media/post_content_images/0013_00.jpg)
+
 ## おわりに
 今回は植物の水やりの自動化を題材にしてCANASPAD-IoTのチュートリアルを作成しました。
 
