--- a/0013/0013.md
+++ b/0013/0013.md
@@ -2,7 +2,7 @@
 
 土壌水分センサとリレーをM5StickCで制御して、自動水やり器を作ってみました。
 
-使い方は簡単で装置の設置後は、丁度いい湿り具合だと思うときにM5StickC本体横のボタンを押すと、その湿り具合を維持するように働きます。
+使い方は簡単で装置の設置後は、丁度いい湿り具合だと思うときにM5StickC本体横のBボタンを押すと、その湿り具合を維持するように働きます。
 
 
 ## 材料について
